Added provisional documentation generation on readthedocs.

--- a/doc/CMakeLists.txt
+++ b/doc/CMakeLists.txt
@@ -6,8 +6,8 @@ if(NOT SPHINX_EXECUTABLE)
 endif()
 
 find_program(DOXYGEN_EXECUTABLE doxygen)
-if (DOXYGEN)
-  add_subdirectory(cpp)
+if (DOXYGEN_EXECUTABLE)
+  add_subdirectory(rst)
 else()
   message(STATUS "Cpp documentation disabled (requires doxygen)")
 endif ()
