Added support for getting and setting generic (ampls) solver parameters. Added support to specify AMPL options when loading the model (enables suffixes to be returned to AMPL)

--- a/python/ampls/CMakeLists.txt
+++ b/python/ampls/CMakeLists.txt
@@ -1,7 +1,7 @@
 include("../createPythonWrapper.cmake")
 set(DIR_CPP_INCLUDE ${DIR_CPP_INCLUDE}
 ${cplex_INCLUDE_DIR}
-${gurobi_INCLUDE_DIR}
+${gurobi_INCLUDE_DIR}/gurobi
 ${CMAKE_CURRENT_SOURCE_DIR}/../../cpp/cplex/include
 ${CMAKE_CURRENT_SOURCE_DIR}/../../cpp/gurobi/include
 )
