--- a/doc/rst/Doxyfile.in
+++ b/doc/rst/Doxyfile.in
@@ -11,7 +11,7 @@ JAVADOC_AUTOBRIEF = YES
 AUTOLINK_SUPPORT = YES
 INLINE_INHERITED_MEMB = YES
 INHERIT_DOCS = YES
-GENERATE_HTML = NO
+GENERATE_HTML = YES
 GENERATE_XML = YES
 XML_OUTPUT   = xml
 ALIASES = "rst=\verbatim embed:rst"
@@ -24,4 +24,4 @@ EXPAND_ONLY_PREDEF     = YES
 HIDE_FRIEND_COMPOUNDS  = YES
 PREDEFINED = __cplusplus \
 			 protected=private
-EXCLUDE_SYMBOLS = ampls::impl::AMPLMutex ampls::impl::SolverDriver ampls::cpx::impl ampls::grb::impl ampls::xpress::impl
+EXCLUDE_SYMBOLS = ampls::impl::AMPLMutex  ampls::cpx::impl ampls::grb::impl ampls::xpress::impl
