--- a/.gitignore
+++ b/.gitignore
@@ -15,3 +15,4 @@ obj
 /csharp/simpleapi/api/dev_simpleapisharp.csproj
 /python/cplex/examples/env
 /python/cplex/examples/cb.log
+/python/examples/env
