--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -217,6 +217,7 @@ function(AddSolverStub solver includes libs)
         # Add a custom target just to show  the following common sources in some IDEs
         add_custom_target(${solver}-common SOURCES ${CMAKE_CURRENT_SOURCE_DIR}/cpp/ampls/swig/ampls-common.i
                                                    ${DIR_SWIG}/${solver}-common.i
+                                                   ${CMAKE_CURRENT_SOURCE_DIR}/python/common-python.i
                                                    ${CMAKE_CURRENT_SOURCE_DIR}/python/createPythonWrapper.cmake
                                                    ${CMAKE_CURRENT_SOURCE_DIR}/csharp/createCsharpProject.cmake
                                                    )
