Modified for compliance with GCC.

--- a/csharp/cplex/cplexsharp-test/cplexsharp-test.csproj
+++ b/csharp/cplex/cplexsharp-test/cplexsharp-test.csproj
@@ -33,9 +33,6 @@
     <WarningLevel>4</WarningLevel>
   </PropertyGroup>
   <ItemGroup>
-    <Reference Include="cplexsharp">
-      <HintPath>..\..\..\build\vs64\bin\cplexsharp.dll</HintPath>
-    </Reference>
     <Reference Include="System" />
     <Reference Include="System.Core" />
     <Reference Include="System.Xml.Linq" />
@@ -54,6 +51,12 @@
   </ItemGroup>
   <ItemGroup>
     <WCFMetadata Include="Connected Services\" />
+  </ItemGroup>
+  <ItemGroup>
+    <ProjectReference Include="..\api\dev_cplexsharp.csproj">
+      <Project>{295191ba-3efa-4efd-a738-472e5da8b48c}</Project>
+      <Name>dev_cplexsharp</Name>
+    </ProjectReference>
   </ItemGroup>
   <Import Project="$(MSBuildToolsPath)\Microsoft.CSharp.targets" />
 </Project>
